# Electronic_Toll_Collection

devel/: .catkin  .rosinstall  setup.sh
devel/lib/detection/: listner  talker
devel/lib/pkgconfig/: detection.pc  usb_cam.pc
devel/lib/usb_cam/: usb_cam_node
devel/share/detection/cmake/: detectionConfig.cmake
devel/share/usb_cam/cmake/: usb_camConfig.cmake
install/: _setup_util.py  setup.sh
install/lib/pkgconfig/: detection.pc
install/lib/usb_cam/: usb_cam_node
install/share/detection/: package.xml
install/share/detection/cmake/: detectionConfig.cmake
src/detection/: CMakeLists.txt
src/detection/src/: car_detection.py  image_publisher.py  image_sub.cpp  pulisher.py  real_publisher.py
